--- a/doc/quals_template.tex
+++ b/doc/quals_template.tex
@@ -1,4 +1,3 @@
-
 \documentclass[twocolumn,10pt]{article}
 
 \usepackage{balance}
@@ -10,7 +9,7 @@
 \newcommand{\eg}{{\em e.g.,}~}
 
 \begin{document}
-\title{Big Data Analysis Exploiting Genome Similarity\\ Qualifying Exam}
+\title{Big Data Analysis Exploiting Genome Similarity\\Qualifying Exam}
 \author{Kristal Curtis}
 \date{Dec. 13, 2012}
 \maketitle
@@ -145,7 +144,7 @@ We used a merge distance of 4 based on our experiments with varying the merge di
 \section{Vision for Exploiting Similar Regions}
 \label{section:visionExploitingSimilarRegions}
 
-In Section \ref{section:similarityProblem}, we discussed how genome similarity makes short-read processing, specifically alignment, more challenging, and we presented a method for locating the similar regions in the genome.  In this section, we will discuss how to exploit the similar regions that we have identified to improve short-read analysis.  We will begin by describing ongoing work that aims to improve alignment performance by using similar regions.  We will also discuss plans for future work in which we will make use of the information about similar regions in subsequent stages of the pipeline.
+In Section \ref{section:similarityProblem}, we demonstrated that genome similarity makes short-read processing, specifically alignment, more challenging, and we presented a method for locating the similar regions in the genome.  In this section, we will explain how to exploit the similar regions that we have identified to improve short-read analysis.  We will begin by describing ongoing work that aims to improve alignment performance by using similar regions.  We will also discuss plans for future work in which we will make use of the information about similar regions in subsequent stages of the pipeline.
 
 \subsection{Exploiting Similarity in Alignment}
 \label{section:exploitingSimilarityInAlignment}
@@ -153,7 +152,7 @@ In Section \ref{section:similarityProblem}, we discussed how genome similarity m
 % most straightforward:  use clusters in the best-matcher
 The most straightforward way to utilize the clusters we produced is to augment SNAP so that it uses information about whether a particular genome position belongs to a cluster.  In the regular version of SNAP described in Section \ref{section:SNAP}, alignment errors are usually due to the situation illustrated in Figure \ref{fig:simAwareSNAP}(a).  Due to the setting of \(h_{max}\), SNAP may consider only some of a read's candidate locations.  This leads to alignment errors when SNAP chooses a location out of the ones it has considered, while the correct location was skipped.
 
-Our idea is to extend SNAP to be aware if a read's candidate locations are in a cluster.  This idea is illustrated in Figure \ref{fig:simAwareSNAP}(b).  Instead of considering each location on its own, without regard to its cluster status, we check for each of a read's candidate locations whether that location belongs to a cluster.  If it does, we automatically pull in all the members of the cluster and compare the read to each of them.  This helps us avoid missing good locations where our read might align (due to \(h_{max}\) being set too low).
+Our idea is to extend SNAP to be aware of whether a read's candidate locations are in a cluster.  This idea is illustrated in Figure \ref{fig:simAwareSNAP}(b).  Instead of considering each location on its own, without regard to its cluster status, we check for each of a read's candidate locations whether that location belongs to a cluster.  If it does, we automatically pull in all the members of the cluster and compare the read to each of them.  This helps us avoid missing good locations where our read might align (due to \(h_{max}\) being set too low).
 
 \begin{figure*}
 \centering
@@ -161,7 +160,7 @@ Our idea is to extend SNAP to be aware if a read's candidate locations are in a 
 \includegraphics[scale=0.33]{snapWithoutClusters.pdf} & \includegraphics[scale=0.33]{simAwareSNAP.pdf}\\
 (a) & (b)\\
 \end{tabular}
-\caption{SNAP, with and without clusters.  (a)  Without clusters, SNAP may miss some good locations for a read, causing errors.  (b)  With clusters, when SNAP finds that a read matches well against a particular location, it also checks the peers (\ie cluster members) of that location.  This avoids missing locations to which the read may align better than the given location and cuts down on the error rate.}
+\caption{SNAP, with and without clusters.  (a)  Without clusters, SNAP may miss some good locations for a read, causing errors.  (b)  With clusters, when SNAP finds that a read matches well against a particular location, it also checks the peers (\ie cluster members) of that location.  This avoids missing locations to which the read may align better than the given location and therefore reduces the error rate.}
 \label{fig:simAwareSNAP}
 \end{figure*}
 
@@ -169,20 +168,27 @@ Our idea is to extend SNAP to be aware if a read's candidate locations are in a 
 This approach is bound to improve alignment accuracy, since the effect of the clusters is that you compare against more locations and are therefore more likely to find the best location to which the read aligns.  The main challenge, then, is to perform this similarity-aware alignment efficiently.  
 
 % discuss some of the techniques we're using
-Presently, we use three techniques to improve the similarity-aware SNAP's performance.  First, we create a special index that is informed by the cluster membership of the genome positions.  In the normal SNAP index, we insert into the hash table a given seed and the position(s) at which it may be found in the genome.  In our similarity-aware index, we modify this approach, in that if a seed found at a given position is in a cluster, instead of storing that position with the seed in the index, we store the cluster ID, which we define to be the first (\ie with the lowest index) member of the cluster.  This avoids an extra step of determining, once you know that a position is in a cluster, which cluster to which a position belongs.
+Presently, we use three techniques to improve the similarity-aware SNAP's performance.  First, we create a special index that is informed by the cluster membership of the genome positions.  In the normal SNAP index, we insert into the hash table a given seed and the position(s) at which it may be found in the genome.  In our similarity-aware index, we modify this approach, in that if a seed occurring at a given position is in a cluster, instead of storing that position with the seed in the index, we store the cluster ID, which we define to be the first (\ie with the lowest genome position) member of the cluster.  This avoids an extra step of determining, once you know that a position is in a cluster, the cluster to which a position belongs.
 
-A second technique we use to reduce alignment latency is intra-cluster pruning.  The idea here is that we want to be able to tolerate clusters that may be a little too inclusive, since clusters with more members result in higher accuracy (as more locations are being checked), and because as mentioned in Section \ref{section:identifyingSimilarRegions}, tuning the clusters from our union-find approach is not straightforward.  Therefore, we introduce a preprocessing step in which for each cluster, we determine the consensus string (by simply taking the most popular base at each position), as well as each member's differences from the consensus.  Then, when we decide we want to compare a read to a particular cluster, we use the triangle inequality to filter out members that we know are too distant from the read.  
+A second technique we use to reduce alignment latency is intra-cluster pruning.  The idea is that we want to be able to tolerate clusters that may be a little too inclusive, since clusters with more members result in higher accuracy (as more locations are being checked), and because as mentioned in Section \ref{section:identifyingSimilarRegions}, tuning the clusters from our union-find approach is not straightforward.  Therefore, we introduce a preprocessing step in which for each cluster, we determine the consensus string (by simply taking the most popular base at each position), as well as each member's differences from the consensus.  Then, when we decide we want to compare a read to a particular cluster, we use the triangle inequality to filter out members that we know are too distant from the read.  
 
-Third, we have developed a version of the edit distance algorithm that exploits the similarity among the cluster's members.  The idea here is that the strings in a cluster are all very similar to each other, so it is wasteful to compare the read separately against all the locations.  Instead, we compare only against the differences between each cluster member and the consensus string.
+Third, we have developed a version of the edit distance algorithm that exploits the similarity among the cluster's members.  The insight here is that the strings in a cluster are all very similar to each other, so it is wasteful to compare the read separately against all the locations.  Instead, we compare only against the differences between each cluster member and the consensus string.
+
+In Figure \ref{fig:bestMatchResults}, we present the performance results of the similarity-aware SNAP, compared to the regular version of SNAP, as well as Novoalign and BWA.  The similarity-aware SNAP is much more accurate than any of the other aligners.  However, it aligns slightly fewer reads.  
 
 % this might be a good place for DP & AF's "hypothetical" graph
+\begin{figure*}[!t]
+\includegraphics[scale=0.6]{bestMatchResults.pdf}
+\label{fig:bestMatchResults}
+\caption{Results of best-match version of SNAP and similarity-aware SNAP on 1M simulated reads, compared to results for BWA and Novoalign.  The error rate for the similarity-aware SNAP is much lower than that for the regular SNAP; however, it is currently slower and aligns slightly fewer reads.  We have plans to improve the performance of the similarity-aware SNAP, with the goal of reaching the performance indicated by the orange lines.}
+\end{figure*}
 
 % talk about future work to improve the speed further
 % discuss how we've done profiling and we need to optimize the indexing scheme, given the memory access patterns we've observed
 
 % extension:  use them in the all-matcher
-Another application of the clusters related to alignment is creating an \textit{all matcher} version of SNAP, where instead of returning the single best location where a read matches (or no location, if no confident alignment is available), we return all locations to which SNAP matches within a given edit distance.  All matchers tools are useful for several reasons.  First, some of the structural variant detection tools (\eg VariationHunter) rely on such information \cite{Hormozdiari:2009}.  Current all matchers, such as mrFAST \cite{Alkan:2009}, are painfully slow.  % TODO:  give some #s here
-Therefore, creating a faster version of an all-match aligner would make it easier and more practical to use tools like VariationHunter.
+Another application of the clusters related to alignment is creating an \textit{all matcher} version of SNAP, where instead of returning the single best location where a read matches (or no location, if no confident alignment is available), we return all locations to which a read matches within a given edit distance.  Some of the structural variant detection tools (\eg VariationHunter) rely on such information \cite{Hormozdiari:2009}.  However, current all matchers, such as mrFAST \cite{Alkan:2009}, are painfully slow.  % TODO:  give some #s here
+Therefore, improved all-matchers would make it easier and more practical to use tools like VariationHunter.
 We provide the performance results of our all-matcher in Table \ref{table:allMatcher}.  Through the use of some of the techniques presented in the context of the best-match version of SNAP (see Section \ref{section:exploitingSimilarityInAlignment}), we are able to achieve a speedup over the regular SNAP all-matcher.
 
 % give the results we have for the all-matcher (just for chr1-3)
@@ -194,9 +200,9 @@ We provide the performance results of our all-matcher in Table \ref{table:allMat
 \hline
 \vrule height 10pt depth 0pt width 0pt Regular SNAP & 2125 & -\\
 \hline
-\vrule height 10pt depth 0pt width 0pt Sim-aware SNAP, regular index & 2358 & 1.11\\
+\vrule height 10pt depth 0pt width 0pt Sim-aware SNAP, regular index & 2358 & 1.1\\
 \hline
-\vrule height 10pt depth 0pt width 0pt Sim-aware SNAP, sim-aware index & 2920 & 1.37\\
+\vrule height 10pt depth 0pt width 0pt Sim-aware SNAP, sim-aware index & 2920 & 1.4\\
 \hline
 \end{tabular}
 \caption{Using clusters in the all matcher version of SNAP results in a speedup over the regular SNAP all-matcher without clusters.  Results shown were obtained aligning one million simulated reads from chromosomes 1-3.}
@@ -205,23 +211,22 @@ We provide the performance results of our all-matcher in Table \ref{table:allMat
 % TODO:  add a line in the table for mrFAST, and maybe mrsFAST as well?
 
 % talk about how we're still working on improving the results
-With both the best-match and all-match versions of SNAP, we have spent some time doing profiling to determine how to further improve the speedup obtained by using the clusters.  Our main insight is that the similarity-aware versions of SNAP spend a lot more time in cache misses, each of which costs hundreds of CPU cycles, than the regular version of SNAP.  These cache misses result when the similarity-aware SNAP queries the similarity map to determine whether a given position is in a cluster because the similarity map is too large to fit in the cache.  Therefore, we are currently devising a strategy to alter the similarity map representation so that it will fit into the L3 cache; we are aiming to make it fit in 8 MB.  We plan to use Bloom filters to represent the positions, so that we will need only 5 bits per position.  We also plan to store only the cluster IDs in the similarity map, rather than all the positions that are in clusters.  We expect that this will enable us to further improve the speedup obtained.  However, given that SNAP's memory access patterns have been heavily optimized, the fact that the less mature versions of our similarity-aware best- and all-match algorithms are near or slightly outperforming the standard SNAP is encouraging.  %  TODO:  is this true?
+With both the best-match and all-match versions of SNAP, we have spent some time doing profiling to determine how to further improve the speedup obtained by using the clusters.  Our main insight is that the similarity-aware version of SNAP spends a lot more time in cache misses, each of which costs hundreds of CPU cycles, than the regular version of SNAP.  These cache misses result when the similarity-aware SNAP queries the similarity map, which contains information about the cluster membership of each genome position, to determine whether a given position is in a cluster because the similarity map is too large to fit in the cache.  Therefore, we are currently devising a strategy to alter the similarity map representation so that it will fit into the L3 cache; we are aiming to make it fit in 8 MB.  We plan to use Bloom filters to represent the positions, so that we will need only 5 bits per position.  We also plan to store only the cluster IDs in the similarity map, rather than all the positions that are in clusters.  We expect that this will enable us to further improve the speed of both the best-match and the all-match versions of the similarity-aware aligner.
 
 % this part is important!
 \subsection{Exploiting Similarity throughout the Pipeline}
 
-Having observing the impact of genome similarity on alignment, and having demonstrated that exploiting similarity will enable us to improve on alignment, we now look to the rest of the pipeline with an aim to improve downstream processing as well.  As before, we are interested in improving on both the speed and accuracy of current tools.  In what follows, we discuss our plans for utilizing similarity information throughout the pipeline.
+Having observed the impact of genome similarity on alignment, and having demonstrated that exploiting similarity will enable us to enhance alignment, we now look to the rest of the pipeline with an aim to improve downstream processing as well.  As before, we are interested in increasing both the speed and accuracy of current tools.  In what follows, we discuss our plans for utilizing similarity information throughout the pipeline.
 
 \subsubsection{Mapping Quality}
 
 One important direction for improving the stages that are downstream from alignment is producing mapping quality (MAPQ) values.  Currently, SNAP lacks the ability to report a broad spectrum of MAPQ values.  Instead, it basically employs a binary strategy:  if SNAP is confident about the alignment (\ie believes the read to be uniquely alignable), it reports a MAPQ of 60; otherwise, if it believes that the read can only be aligned ambiguously, it reports 0.  Therefore, an obvious extension to SNAP would be reporting mapping quality values that span the full range rather than just giving a binary response.  This would be useful because even in the case where SNAP believes that it has found an unambiguous best match, downstream stages would benefit from knowing how confident SNAP is about that value.
 
-Mapping quality was introduced in the context of the MAQ aligner \cite{Li:2008}.  It was extended to allow SNPs and indels in the context of Stampy \cite{Lunter:2011}.  The goal of a mapping quality score is to provide the probability that the read has been misaligned.  To do this in full, it is necessary to compare how well the read aligns at the chosen location to how well it aligns at every other location in the genome.  Obviously, this is prohibitively expensive.  Therefore, this quantity is approximated, generally by considering the best and second-best hits.  The MAQ mapping quality formula considers the base quality values at read positions that do not match the reference at the best and second-best matching genome locations.  They also consider the number of hits with the same number of mismatching bases as the second-best hit.  The idea, then, is that if a read has many locations that are almost as good as the best one, you will be less confident about aligning it.
+Mapping quality was introduced in the context of the MAQ aligner \cite{Li:2008}.  It was extended to allow SNPs and indels in the context of Stampy \cite{Lunter:2010}.  The goal of a mapping quality score is to provide the probability that the read has been misaligned.  To do this in full, it is necessary to compare how well the read aligns at the chosen location to how well it aligns at every other location in the genome.  Obviously, this is prohibitively expensive.  Therefore, this quantity is approximated, generally by considering the best and second-best hits.  The MAQ mapping quality formula considers the base quality values at positions within the read that do not match the reference at the best and second-best matching genome locations.  They also consider the number of hits with the same number of mismatching bases as the second-best hit.  The idea, then, is that if a read has many locations that are almost as good as the best one, you will be less confident about aligning it.
 
-While a potentially valuable signal to downstream analysis, MAPQ values are generally regarded to be unreliable.  However, downstream analysis does rely on these values, \eg by only considering reads that have been mapped with a MAPQ above a certain threshold.  This results in loss of data that could potentially be useful.  One step that pipelines take to deal with this issue is quality score recalibration \cite{DePristo:2011}; however, this process is very expensive and also potentially error-prone.  Therefore, an improvement to MAPQ would not only be an improvement to SNAP, but it would also potentially improve the speed, by avoiding recalibration, and accuracy, by providing better information about which reads to trust, of the later stages of the pipeline.
+While a potentially valuable signal about alignment accuracy, MAPQ values are generally regarded to be unreliable.  However, downstream analysis does rely on these values, \eg by only considering reads that have been mapped with a MAPQ above a certain threshold.  This results in loss of data that could potentially be useful.  One step that pipelines take to deal with this issue is quality score recalibration \cite{DePristo:2011}; however, this process is very expensive and also potentially error-prone.  Therefore, an improvement to MAPQ would not only be an improvement to SNAP, but it would also potentially improve the speed, by avoiding recalibration, and accuracy, by providing better information about which reads to trust, of the later stages of the pipeline.
 
 Our idea is to not only add the existing approach to MAPQ to SNAP, but also to improve on MAPQ using our similarity information.  We plan to follow the existing approach that takes into account other locations that are candidates for where a read may match.  The clusters will provide a useful signal to where else the read may match, while still maintaining an efficient MAPQ computation.  The idea is that if a read is aligned to a cluster, you automatically know many other locations where it will likely align well.  Therefore, you can take this information into account when you compute the MAPQ score.  The hope is that using clusters, you will get more of the potential matches for the read than you would otherwise, and therefore your approximation should be better than it would be if you missed some of these potential matches.  Recall that the ideal scenario would be comparing against all other locations in the genome; while this is intractable, we can further approach this ideal by using the cluster information.  Recall also that the great majority of alignment errors occur in clusters.  Therefore, just the fact that a read aligns to a cluster location is a powerful signal that the alignment may be incorrect.
-% this paragraph probably needs work!  maybe talk about the likelihood that errors are in clusters first, then the advantage of getting more positions to compare against
 
 % pipeline -- use it as a signal to where to spend extra processing time (eg, ravi's SV)
 \subsubsection{Variant Calling}
@@ -260,7 +265,7 @@ I plan to complete my graduate studies this semester.  I will work on writing up
 
 \section{Conclusion}
 
-In order to fully realize the potential of whole-genome sequencing to help with diagnosis and treatment of molecularly-driven diseases, especially cancer, we have demonstrated that it is essential to provide short read analysis tools that are more efficient than the status quo.  In this work, we have presented some steps in that direction.  Through our experience developing the SNAP alignment algorithm, we have identified that the similar regions in the human genome present the main obstacle to efficient and accurate short read analysis.  We have motivated that identifying similar regions in the genome should be driven by the short reads themselves, rather than attempted at a very general and unconstrained level.  This provides a more constrained setting for similar region identification, leading to output that is more usable by short read processing algorithms.  
+In order to fully realize the potential of whole-genome sequencing to help with diagnosis and treatment of molecularly-driven diseases, especially cancer, we have demonstrated that it is essential to provide short-read analysis tools that are more efficient than the status quo.  In this work, we have presented some steps in that direction.  Through our experience developing the SNAP alignment algorithm, we have identified that the similar regions in the human genome present the main obstacle to efficient and accurate short-read analysis.  We have motivated that identifying similar regions in the genome should be driven by the short reads themselves, rather than attempted at a very general and unconstrained level.  This provides a more constrained setting for similar region identification, leading to output that is more usable by short read processing algorithms.  
 
 We have taken some initial steps to leveraging the similar regions we have identified to improve alignment, in both the best-match and all-match setting.  We have also discussed our plans for extending this work, both via optimizing the existing best-match and all-match algorithms to improve their efficiency, and also by leveraging similarity in later stages of the pipeline.  We believe that similarity will play a major role in variant calling as well as in alignment, and that by exploiting the similarity of the genome, that we can produce improved variant calling tools that will help clinical sequencing to become practical.
 
